# Spex

./: Project.sln  faces.cfg  ogreViewer.vcxproj  ogreViewer.vcxproj.filters  plugins.cfg  resources.cfg  resources_d.cfg  spectacles.cfg
media/materials/scripts/: ArrowBlue.material  ArrowGreen.material  ArrowRed.material  Crosshair.material  Glass.material  Metal.material  Plastic.material  defaultMat.material
media/materials/textures/: envmap_Farblabor.hdr  envmap_Farblabor2.hdr  envmap_Farblabor2_blur.hdr
media/models/: Perry-Smith_Head.mesh  menrad_brille1.mesh
trunk/: CMakeLists.txt  ToDo_Schedule.txt
trunk/CMake/: FindKinectSDK.cmake  FindKinectToolkit.cmake
trunk/media/crosshair/: crosshair.mtl
trunk/media/materials/scripts/: DebugMaterial.material  DepthTex.material  FaceModel.material  SpecThumb.overlay
trunk/media/models/: CrossRH.mesh  PseudoCross.mesh  Rodenstock3190.mesh  facePlaceHolder.mesh
trunk/ogreViewer/: CMakeLists.txt
trunk/ogreViewer/inc/: AppLogic.h  Face.h  FaceManager.h  FaceTracker.h  KinectSensor.h  OgreRender.h  Spectacles.h  SpectaclesManager.h  TrayGroup.h  TrayGroupManager.h
trunk/ogreViewer/src/: AppLogic.cpp  Face.cpp  FaceManager.cpp  FaceTracker.cpp  KinectSensor.cpp  OgreRender.cpp  Spectacles.cpp  SpectaclesManager.cpp  TrayGroup.cpp  TrayGroupManager.cpp  mainMRGlasses.cpp
